force-app/main/default/objects/TrailheadData__c/TrailheadData__c.object-meta.xml
<CustomObject>
    <label>TrailheadData</label>
    <nameField>
        <label>TrailheadData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrailheadDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>