force-app/main/default/objects/TrailheadData__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>