force-app/main/default/objects/TrailheadData__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>6</length>
    <type>Text</type>
</CustomField>