force-app/main/default/objects/TrailheadData__c/fields/Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Superbadges__c</fullName>
    <label>Superbadges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>