force-app/main/default/objects/TrailheadData__c/fields/THData__c.field-meta.xml
<CustomField>
    <fullName>THData__c</fullName>
    <label>THData</label>
    <type>TextArea</type>
</CustomField>